# GenAI

./: .gitignore  auth.json  cookies.pkl  logs.txt  news_report.md  news_summary.md  output.log.txt  pyproject.toml  report.json  report.md  test_image_analysis.py  test_neo4j_tool.py  test_pygooglenews.py  test_query_article_tool.py  test_scraper.py  test_screenshot_to_blob.py  test_twitter_scraper.py  tweets.json  twitter_data.json  twitter_sentiment_analysis  twitter_sentiment_analysis.md  web_search_results.json
factory/: save-cookies.py  sw.py  undetectable.py
output/: URLs.md  article.md  article_summary.md  article_summary.txt  google_search.md  google_search.txt  research_summary.txt  search_results.txt  tweets.json  tweets.txt  twitter_sentiments.txt  web_summary.md
src/journalist/: crew.py  main.py
src/journalist/config/: agents.yaml  tasks.yaml
src/journalist/tools/: image_search_tool.py  neo4j_article_tool.py  pygooglenews.py  query_article_tool.py  query_question_tool.py  scrape_website_tool.py  scraper.py  serper_dev.py  twitter_scraper.py  url_scraper.py  web_scraper.py
src/my_journalistic_crew/: crew.py  main.py
src/my_journalistic_crew/MyPyModels/: ArticleModel.py
src/my_journalistic_crew/config/: agents.yaml  tasks.yaml
src/my_journalistic_crew/models/: ArticleModel.py  TwitterElements.py  categories.py  outputs.py  profiles.py
src/my_journalistic_crew/tools/: analyse_image.py  blob_storage_tool.py  custom_search_tool.py  download_image.py  download_thumbnail.py  google_custom_search_tool.py  image_analysis_tool.py  image_search_tool.py  neo4j_article_tool.py  news_search_tool.py  push_article_DB.py  read_website_content.py  scrape_website.py  scrape_website_tool.py  search_google_images.py  search_top_tweets.py  send_article_neo4j.py  send_image_blob.py  serper_dev_tool.py  take_tweet_screenshot.py  tweet_screenshot_tool.py  twitter_scraper.py  (+1 more)
tests/: test_query_question_tool.py
z_output/: 11_research_task.json  11research_task.json  12_analysis_task.json  13_image_functions_task.json  14_reporting_task.json  22reporting_task.json  format.json  publish.json  read_website.json  scrape_tweets.json  search_images.json  search_news.json  select_image.json  write.json
(+20 files in other folders)
