[project]
name = "journalist"
version = "0.1.0"
description = "journalist using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "annotated-types>=0.7.0",
    "crewai[tools]>=0.108.0,<1.0.0",
    "selenium>=4.30.0",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
journalist = "journalist.main:run"
run_crew = "journalist.main:run"
train = "journalist.main:train"
replay = "journalist.main:replay"
test = "journalist.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
